--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -32,10 +32,10 @@
                 android:id="@+id/img_item"
                 android:layout_width="@dimen/dp_88"
                 android:layout_height="@dimen/dp_88"
+                android:scaleType="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:scaleType="center"
                 app:srcCompat="@drawable/profile_pic" />
 
             <androidx.appcompat.widget.AppCompatTextView
@@ -45,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_13"
                 android:text="@string/roll_lollipop"
-                app:layout_constraintEnd_toStartOf="@id/txt_item_quantity"
+                app:layout_constraintEnd_toStartOf="@id/edt_item_quantity"
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toEndOf="@id/barrier"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -62,24 +62,29 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/txt_item_amount"
                 style="@style/cartAmount"
+                setCartAmount="@{mData}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_4"
-                android:text="@string/dummy_dollar"
-                app:layout_constraintEnd_toStartOf="@id/txt_item_quantity"
+                app:layout_constraintEnd_toStartOf="@id/edt_item_quantity"
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toEndOf="@id/barrier"
-                app:layout_constraintTop_toBottomOf="@id/rb_item" />
+                app:layout_constraintTop_toBottomOf="@id/rb_item"
+                tools:text="@string/dummy_dollar" />
 
             <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/txt_item_quantity"
+                android:id="@+id/edt_item_quantity"
                 style="@style/cartQuantity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="@string/zero"
                 android:inputType="number"
+                android:gravity="end"
+                android:minWidth="@dimen/dp_48"
+                android:minHeight="@dimen/dp_32"
+                android:imeOptions="actionDone"
                 android:maxLength="4"
-                android:text="@string/dummy_quantity"
+                android:text="@{String.valueOf(mData.itemQuantity)}"
                 app:layout_constraintBottom_toBottomOf="@id/txt_item_amount"
                 app:layout_constraintEnd_toEndOf="@id/barrier_button"
                 app:layout_constraintTop_toTopOf="@id/txt_item_name" />
@@ -88,11 +93,10 @@
                 android:id="@+id/img_plus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/dp_4"
                 android:clickable="true"
                 android:focusable="true"
                 android:foreground="@drawable/default_ripple_round"
-                android:padding="@dimen/dp_10"
+                android:padding="@dimen/dp_16"
                 app:layout_constraintBottom_toTopOf="@id/img_minus"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -103,11 +107,10 @@
                 android:id="@+id/img_minus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/dp_4"
                 android:clickable="true"
                 android:focusable="true"
                 android:foreground="@drawable/default_ripple_round"
-                android:padding="@dimen/dp_10"
+                android:padding="@dimen/dp_16"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/img_plus"
