--- a/app/src/main/res/layout/fragment_dashboard_detail.xml
+++ b/app/src/main/res/layout/fragment_dashboard_detail.xml
@@ -116,7 +116,7 @@
                     android:layout_marginBottom="@dimen/dp_32"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="@id/guideline_start"
-                    app:srcCompat="@drawable/ic_fav"
+                    app:srcCompat="@drawable/selector_shape_detail"
                     tools:ignore="ImageContrastCheck" />
 
                 <androidx.appcompat.widget.AppCompatButton
