--- a/app/src/main/res/layout/item_dashboard.xml
+++ b/app/src/main/res/layout/item_dashboard.xml
@@ -80,7 +80,8 @@
                 android:clickable="true"
                 android:focusable="true"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:srcCompat="@drawable/ic_add"
+                app:srcCompat="@drawable/selector_shape_dashboard"
+                setAddToCart="@{mData}"
                 tools:ignore="UnusedAttribute,ImageContrastCheck" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
